# basic-rust-staticfile-server

./: Cargo.toml  Dockerfile.dev  README.md  docker-compose.yaml  main.rs
src/: lib.rs  log4rs.yaml  main.rs
src/commons/: handle_errors.rs  logger.rs  mod.rs
src/dtos/: flat_entries_dtos.rs  mod.rs
src/handlers/: flat_entries_handlers.rs  mod.rs
