[package]
name = "rust-microservice-archetype"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-microservice-archetype"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
serde = "1.0.197"
serde_derive = "1.0.197"
